language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/return_with_borrowed_loc_resource_invalid.move
module 0x8675309::M {
    struct X has key { u: u64 }

    fun t() {
        let s = X { u: 0 };
        let u = &s.u;
        copy u;
    }
}

// check: RET_UNSAFE_TO_DESTROY_ERROR
